Update JdbcCheck.java
better class instantiation